# manga-manager

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: CompilerOptions.cmake  CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  WindowSystemIntergration.cmake
include/: mangadex.h  string_manipulation.h
include/providers/: mangadex.h
src/: CMakeLists.txt  http.cpp  main.cpp  mangadex.cpp  string_manipulation.cpp
src/core/: CMakeLists.txt  http.cpp  http.h
src/core/include/manga-manager/: http.h
src/core/src/: http.cpp
src/os/: CMakeLists.txt  window.h
src/os/linux/: CMakeLists.txt
src/os/linux/wayland/: CMakeLists.txt
src/os/linux/x11/: CMakeLists.txt  window.h
src/os/windows/: CMakeLists.txt
src/providers/: CMakeLists.txt  mangadex.cpp  mangadex.h
src/providers/examples/: CMakeLists.txt  main.cpp
src/providers/src/: mangadex.cpp
src/ui/: CMakeLists.txt  vulkan_defines.h  vulkan_renderer.cpp  vulkan_renderer.h  window.cpp  window.h
src/ui/assets/: vulkantut.frag  vulkantut.vert
src/ui/examples/: CMakeLists.txt  main.cpp
src/ui/src/: main.cpp
